Project ITA_Airways {
  database_type: 'PostgreSQL'
  Note: 'Sistema di gestione voli e prenotazioni per ITA Airways'
}

Table Aeroporto {
  codice varchar(3) [pk]
  citta varchar(50) [not null]
  nazione varchar(50) [not null]
  nome_completo varchar(100) [not null]
}

Table Aereo {
  id_aereo serial [pk]
  compagnia varchar(50) [not null]
  modello varchar(50) [not null]
  capacita integer [not null]
}

Table Tratta {
  id_tratta serial [pk]
  aeroporto_partenza varchar(3) [ref: > Aeroporto.codice, not null]
  aeroporto_arrivo varchar(3) [ref: > Aeroporto.codice, not null]
  distanza_km integer [not null]
}

Table Viaggio {
  id_viaggio serial [pk]
  id_aereo integer [ref: > Aereo.id_aereo, not null]
  data_partenza timestamp [not null]
}

Table Scalo {
  id_scalo serial [pk]
  id_viaggio integer [ref: > Viaggio.id_viaggio, not null]
  id_tratta integer [ref: > Tratta.id_tratta, not null]
  ordine_scalo integer [not null]
}

Table Passeggero {
  id_passeggero serial [pk]
  nome varchar(50) [not null]
  cognome varchar(50) [not null]
  email varchar(100) [unique, not null]
}

Table Biglietto {
  id_biglietto serial [pk]
  id_passeggero integer [ref: > Passeggero.id_passeggero, not null]
  id_viaggio integer [ref: > Viaggio.id_viaggio, not null]
  classe varchar(10) [not null]
  prezzo decimal(8,2) [not null]
  stato varchar(15) [not null]
  data_emissione timestamp [not null]
}

Table Prenotazione {
  id_prenotazione serial [pk]
  id_biglietto integer [ref: - Biglietto.id_biglietto, not null]
  data_prenotazione timestamp [not null]
  metodo_pagamento varchar(20) [not null]
  stato varchar(15) [not null]
}
